# rust-remote-hal

./: .travis.yml  Cargo.toml  README.md
.cargo/: config
src/: common.rs  error.rs  lib.rs  manager.rs
src/client/: i2c.rs  mod.rs  spi.rs
src/local/: i2c.rs  mod.rs  pin.rs  spi.rs
src/remote/: i2c.rs  mod.rs  pin.rs  spi.rs
src/server/: i2c.rs  mod.rs  pin.rs  spi.rs
